--- a/3c-animation/css/style.css
+++ b/3c-animation/css/style.css
@@ -1579,7 +1579,7 @@ input[type="submit"] {
           animation-delay: 0s; }
   @media screen and (max-width: 768px) {
     .bg-rotate {
-      top: -4.5%; } }
+      top: 0%; } }
 
 @-webkit-keyframes bg-rotate {
   from {
